2006-12-12  Akim Demaille  <demaille@gostai.com>

	error_message
	* src/uconnection.cc (error_message): New.
	Handle UERROR_MEMORY_WARNING.
	(UConnection::error): Use it, it was extracted from here.
	Simplify.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uconnection.cc, src/uobject.cc: Here.

2006-12-12  Razik Yousfi  <yousfi@gostai.com>

	Remove useless attributes.
	* src/uvariablename.hh: Remove useless attributes.
	* src/uvariablename.cc: Use local variables.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Don't be afraid to pass static strings to send
	* src/uexpression.cc: here, instead of first saving them
	in errorString.
	Remove one definition of errorString that is now useless.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uexpression.cc: Also, reduce some scopes.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Remove unused attribute
	* src/ucommand.hh (hmi): Remove.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Simplify the logic of UCommand_LOAD::execute
	* src/ucommand.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	UParser::*_type
	* src/parser/uparser.hh (token_type, semantic_type)
	(location_type): New.
	Use them.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Prefix (some of) the tokens
	The token "in" was mapped to IN which is used somewhere on
	Windows.  Rather than fighting against this, use names that
	are less dangerous by prefixing then with TOK_.
	More should be needed, but at least that fixes the portability
	issue for now.
	* src/parser/bison/ugrammar.y: here.
	Use concrete names rather than abstract token names.
	More propagation is needed.
	* src/parser/bison/utoken.l: Adjust.

2006-12-12  Akim Demaille  <akim.demaille@free.fr>

	Simplify some piece of crap
	I thought I had seen it all checking student code at EPITA...
	* src/uvariablename.cc, src/uvariablename.hh (hmi2): Don't